--- a/test.html
+++ b/test.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="head.css">
+<script>INSTALL_OPTIONS = { showToggle: Math.random() > .5 }</script>
 <script src="head.js"></script>
